<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddProduct">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/upload_a_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_photo_button" />

        <ImageView
            android:id="@+id/upload_photo_image_view"
            android:layout_width="150dp"
            android:layout_height="200dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/product_name" />

        <EditText
            android:id="@+id/product_name_text_view"
            style="@style/InputFieldStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/product_price" />

        <EditText
            android:id="@+id/product_price_text_view"
            style="@style/InputFieldStyle"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/product_current_quantity" />

        <EditText
            android:id="@+id/product_quantity_text_view"
            style="@style/InputFieldStyle"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/supplier_name" />

        <EditText
            android:id="@+id/supplier_name_text_view"
            style="@style/InputFieldStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/supplier_email" />

        <EditText
            android:id="@+id/supplier_email_text_view"
            style="@style/InputFieldStyle"
            android:inputType="textEmailAddress" />
    </LinearLayout>

</LinearLayout>
