<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context="com.example.inventorydatabasev3.ProductDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/product_detail_photo_view"
            android:layout_width="120dp"
            android:layout_height="160dp"
            android:layout_margin="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               android:text="@string/product_name" />

            <TextView
                android:id="@+id/product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#2B3D4D"
                tools:text="@string/product_name"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product_price" />


                    <TextView
                        android:id="@+id/product_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#2B3D4D"
                        tools:text="@string/product_price"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product_current_quantity" />

                    <TextView
                        android:id="@+id/product_quantity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#2B3D4D"
                        tools:text="@string/product_current_quantity"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supplier_name" />

        <TextView
            android:id="@+id/supplier_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:textColor="#2B3D4D"
            tools:text="@string/supplier_name"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supplier_email" />

        <TextView
            android:id="@+id/supplier_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="#2B3D4D"
            tools:text="@string/supplier_email"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/increase_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/increase_quantity_button"
                android:inputType="number"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/quantity_change_by" />

            <EditText
                android:id="@+id/quantity_increment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/decrease_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/decrease_quantity_button"
                android:inputType="number"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"

                android:text="@string/quantity_change_by" />

            <EditText
                android:id="@+id/quantity_decrement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/order_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="18dp"
                android:layout_weight="1"
                android:text="@string/order_button" />

            <Button
                android:id="@+id/delete_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="18dp"
                android:layout_weight="1"
                android:text="@string/delete_button" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
